--- a/A_dbms/templates/dbms/report/balance_custom/top-custom.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-custom.html
@@ -1,5 +1,6 @@
 <tr>
     <td style="padding: 0" align="center">合计</td>
+    <td style="padding: 0" align="center"></td>
     <td style="padding: 0" align="right">{{ c_custom_count }}</td>
     <td style="padding: 0" align="right">{{ c_credit|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_g_value|floatformat:2 }}</td>
@@ -15,6 +16,7 @@
 
 <tr>
     <td style="padding: 0" align="center">总计</td>
+    <td style="padding: 0" align="center"></td>
     <td style="padding: 0" align="right">{{ t_custom_count }}</td>
     <td style="padding: 0" align="right">{{ t_credit|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_g_value|floatformat:2 }}</td>
@@ -30,6 +32,7 @@
 
 <tr>
     <td style="padding: 0" align="center">占比（%）</td>
+    <td style="padding: 0" align="center"></td>
     <td style="padding: 0" align="right">{{ r_custom_count }}</td>
     <td style="padding: 0" align="right">{{ r_credit }}</td>
     <td style="padding: 0" align="right">{{ r_g_value }}</td>
