--- a/A_dbms/templates/dbms/report/balance_custom/top-class.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-class.html
@@ -13,6 +13,7 @@
         <tr style="text-align: center;padding: 0">
             <th>序号</th>
             <th>客户</th>
+            <th>行业</th>
             <th>授信总额</th>
             <th>反担保价值</th>
             <th>授信覆盖率</th>
@@ -29,7 +30,8 @@
         {% for custom in custom_groups %}
             <tr style="padding: 0">
                 <td style="padding: 0">{{ forloop.counter }}</td>
-                <td style="padding: 0">{{ custom.name }}</td>
+                <td style="padding: 0">{{ custom.short_name }}</td>
+                <td style="padding: 0">{{ custom.idustry.cod_nam }}</td>
                 <td style="padding: 0" align="right">{{ custom.credit_amount|floatformat:2 }}</td>
                 <td style="padding: 0" align="right">{{ custom.g_value|floatformat:2 }}</td>
                 <td style="padding: 0" align="right">{{ custom.g_radio|floatformat:2 }}</td>
