--- a/A_dbms/templates/dbms/report/list/custom-table.html
+++ b/A_dbms/templates/dbms/report/list/custom-table.html
@@ -10,7 +10,9 @@
             <th>风控专员</th>
             <th>授信总额</th>
             <th>反担保价值</th>
+            <th>授信覆盖</th>
             <th>在保余额</th>
+            <th>在保覆盖</th>
             <th>流贷余额</th>
             <th>承兑余额</th>
             <th>保函余额</th>
@@ -34,7 +36,9 @@
                 <td style="padding: 0" align="right">{{ custom.controler }}</td>
                 <td style="padding: 0" align="right">{{ custom.credit_amount }}</td>
                 <td style="padding: 0" align="right">{{ custom.g_value }}</td>
+                <td style="padding: 0" align="right">{{ custom.g_radio }}</td>
                 <td style="padding: 0" align="right">{{ custom.amount }}</td>
+                <td style="padding: 0" align="right">{{ custom.v_radio }}</td>
                 <td style="padding: 0" align="right">{{ custom.custom_flow }}</td>
                 <td style="padding: 0" align="right">{{ custom.custom_accept }}</td>
                 <td style="padding: 0" align="right">{{ custom.custom_back }}</td>
