--- a/A_dbms/templates/dbms/review/review/review-filter.html
+++ b/A_dbms/templates/dbms/review/review/review-filter.html
@@ -36,6 +36,7 @@
     <label>
         在保余额：{{ balance|floatformat:2 }}
     </label>
+    <label class="pull-right"><a class="btn btn-primary btn-sm" id="updateDateB">更新间隔</a></label>
 
 </div>
 
