--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -38,6 +38,9 @@
                 {% if 'investigate_add_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="investigateB">补充调查</a>
                 {% endif %}
+                {% if 'custom_change_ajax' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="changeCustom">变更状态</a>
+                {% endif %}
             {% endif %}
         </label>
     </div>
