--- a/A_dbms/templates/dbms/review/review-scan.html
+++ b/A_dbms/templates/dbms/review/review-scan.html
@@ -12,6 +12,8 @@
         {% include 'dbms/review/modl/review-del-mod.html' %}
         {% include 'dbms/review/modl/investigate-add-mod.html' %}
         {% include 'dbms/review/modl/investigate-del-mod.html' %}
+
+        {% include 'dbms/custom/modl/custom-change-mod.html' %}
     </div>
 {% endblock %}
 
@@ -22,4 +24,6 @@
     {% include 'dbms/review/extra/js-review-del.html' %}
     {% include 'dbms/review/extra/js-investigate-add.html' %}
     {% include 'dbms/review/extra/js-investigate-del.html' %}
+
+    {% include 'dbms/custom/extra/js-custom-change.html' %}
 {% endblock %}
