--- a/A_dbms/templates/dbms/custom/extra/js-custom-change.html
+++ b/A_dbms/templates/dbms/custom/extra/js-custom-change.html
@@ -38,6 +38,7 @@
                         $('#e_credit_amount').text(arg.forme.credit_amount);
                         $('#e_custom_state').text(arg.forme.custom_state);
                         $('#e_managementor').text(arg.forme.managementor);
+                        $('#e_controler').text(arg.forme.controler);
                     }
                 }
             })
