--- a/A_dbms/templates/dbms/custom/modl/mod_form/custom-change.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/custom-change.html
@@ -19,6 +19,11 @@
         <div class="col-sm-9">  {{ form_custom_change.managementor }}</div>
         <label id="e_managementor" class="pull-right">{{ form_custom_change.managementor.errors }} </label>
     </div>
+    <div class="form-group"><!--风控专员-->
+        <label for="id_controler" class="col-sm-3 control-label">{{ form_custom_change.controler.label }}：</label>
+        <div class="col-sm-9">  {{ form_custom_change.controler }}</div>
+        <label id="e_controler" class="pull-right">{{ form_custom_change.controler.errors }} </label>
+    </div>
 </div>
 
 
