--- a/A_dbms/templates/dbms/review/review-scan.html
+++ b/A_dbms/templates/dbms/review/review-scan.html
@@ -14,6 +14,7 @@
         {% include 'dbms/review/modl/investigate-del-mod.html' %}
 
         {% include 'dbms/custom/modl/custom-change-mod.html' %}
+        {% include 'dbms/custom/modl/controler-change-mod.html' %}
     </div>
 {% endblock %}
 
@@ -26,4 +27,5 @@
     {% include 'dbms/review/extra/js-investigate-del.html' %}
 
     {% include 'dbms/custom/extra/js-custom-change.html' %}
+    {% include 'dbms/custom/extra/js-controler-change.html' %}
 {% endblock %}
