--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -17,6 +17,7 @@
         {% include 'dbms/custom/modl/custom-change-mod.html' %}
 
         {% include 'dbms/custom/modl/custom-article-add-mod.html' %}
+        {% include 'dbms/custom/modl/controler-change-mod.html' %}
     </div>
 {% endblock %}
 
@@ -32,7 +33,8 @@
     {% include 'dbms/article/extra/js-article-add.html' %}
 
     {% include 'dbms/custom/extra/js-custom-change.html' %}
-
+    {% include 'dbms/custom/extra/js-controler-change.html' %}
+    
     {% include 'dbms/js/js-search-custom.html' %}
 
 
