--- a/A_dbms/templates/dbms/custom/extra/js-controler-change.html
+++ b/A_dbms/templates/dbms/custom/extra/js-controler-change.html
@@ -1,20 +1,19 @@
 <script>
     $(function () {
-        bindChangeCustom();
-        bindChangeCustomModalOk();
+        bindchangeControlerModal();
+        bindchangeControlerModalOk();
     });
 
-    function bindChangeCustom() {
-        $('#changeCustom').click(function () {
-            {#console.log("bindAddCounterB")#}
-            $('#changeCustomModal').modal('show');
+    function bindchangeControlerModal() {
+        $('#changeControler').click(function () {
+            $('#changeControlerModal').modal('show');
         })
     }
 
-    function bindChangeCustomModalOk() {
-        $('#changeCustomModalOk').click(function () {
+    function bindchangeControlerModalOk() {
+        $('#changeControlerModalOk').click(function () {
             var postData = {};
-            $('#changeCustomModal').find('input,select').each(function () {
+            $('#changeControlerModal').find('input,select').each(function () {
                 var v = $(this).val();
                 var n = $(this).attr('name');
                 postData[n] = v;
@@ -22,22 +21,18 @@
             var postDataStr = JSON.stringify(postData);
 
             $.ajax({
-                url: '/dbms/custom/change/',
+                url: '/dbms/custom/controler/',
                 type: 'POST',
                 data: {'postDataStr': postDataStr},
                 dataType: 'JSON',
                 success: function (arg) {
-                    console.log(arg);
                     if (arg.status) {
                         $('#changeCustomModal').modal('hide');
                         alert(arg.message);
                         window.location.reload();
                     } else {
                         alert(arg.message);
-                        $('#e_custom_typ').text(arg.forme.custom_typ);
-                        $('#e_credit_amount').text(arg.forme.credit_amount);
-                        $('#e_custom_state').text(arg.forme.custom_state);
-                        $('#e_managementor').text(arg.forme.managementor);
+                        $('#e_controler').text(arg.forme.controler);
                     }
                 }
             })
