--- a/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
@@ -22,4 +22,16 @@
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         保函余额：{{ custom_obj.custom_back }}
     </label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        在保总额：{{ custom_obj.amount }}
+    </label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        风险分类：{{ custom_obj.get_classification_display }}
+    </label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        项目经理：{{ custom_obj.managementor.name }}
+    </label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        风控专员：{{ custom_obj.controler.name }}
+    </label>
 </div>
