--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -24,9 +24,6 @@
                 {% if 'custom_del_ajax' in authority_list %}
                     <a class="btn btn-danger btn-sm " id="delCustom">删除</a>
                 {% endif %}
-                {% if 'custom_change_ajax' in authority_list %}
-                    <a class="btn btn-primary btn-sm " id="changeCustom">变更状态</a>
-                {% endif %}
             {% endif %}
             {% if PAGE_TITLE == '保后详情' %}
                 {% if 'review_plan_ajax' in authority_list %}
@@ -38,9 +35,12 @@
                 {% if 'investigate_add_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="investigateB">补充调查</a>
                 {% endif %}
-                {% if 'custom_change_ajax' in authority_list %}
-                    <a class="btn btn-primary btn-sm " id="changeCustom">变更状态</a>
-                {% endif %}
+            {% endif %}
+            {% if 'custom_change_ajax' in authority_list %}
+                <a class="btn btn-primary btn-sm " id="changeCustom">变更状态</a>
+            {% endif %}
+            {% if 'custom_controler_ajax' in authority_list %}
+                <a class="btn btn-primary btn-sm " id="changeControler">变更专员</a>
             {% endif %}
         </label>
     </div>
