--- a/A_dbms/templates/dbms/report/meeting/meeting-article-meeting.html
+++ b/A_dbms/templates/dbms/report/meeting/meeting-article-meeting.html
@@ -21,6 +21,15 @@
                     {% endif %}
                 {% endfor %}
             </label>
+            <label>
+            <form class="navbar-form" style="display: inline">
+                <input type="date" name="tf" class="form-control" placeholder="起始日"
+                       value="{{ tf_r|default_if_none:'' }}">
+                <input type="date" name="tl" class="form-control" placeholder="结束日"
+                       value="{{ tl_r|default_if_none:'' }}">
+                <button type="submit" class="btn btn-primary btn-sm">搜索</button>
+            </form>
+        </label>
         </div>
         <div class="table-responsive">
             <table class="table table-bordered table-hover table-condensed active">
