--- a/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
@@ -29,12 +29,13 @@
 <p>若上述手续未完全齐备，或所有必须的文件尚未达到贷款人或相关法律机构的要求，则贷款人有权不予发放本合同项下贷款，相应后果由借款人全部承担。</p>
 <p><strong>第五条  贷款偿还</strong></p>
 <p>5.1本合同项下，借款人以壹月为一期，按期还款，首期自2.2款规定之放款日起计算。计算一期的正常利息采用月利率，本合同项下利率转换方式为：月利率=年利率/12；日利率=年利率/360。</p>
-<p>本合同采取以下第<u><strong>（{% if agree_obj.repay_method == 11 %}1{% elif agree_obj.repay_method == 21 %}2{% elif agree_obj.repay_method == 31 %}3{% endif %}）</strong></u>项方式还款：</p>
+<p>本合同采取以下第<u><strong>（{% if agree_obj.repay_method == 11 %}1{% elif agree_obj.repay_method == 21 %}2{% elif agree_obj.repay_method == 31 %}3{% elif agree_obj.repay_method == 41 %}4{% endif %}）</strong></u>项方式还款：</p>
 <p>（1）按月付息、到期一次还本法：借款人每月付息，贷款到期日一次性偿还贷款本金。当月利息=贷款本金×日利率×占用天数。</p>
 <p>（2）等额本息法：即贷款期限内每期以相等的额度偿还贷款本息，每期还款额计算公式为：</p>
 <p><img src="{% static "/dbms/images/debx.png" %}"></p>
 <p>每期还款额为人民币（大写金额）：<u><strong>{% if agree_obj.repay_method == 21 %}{{ agree_obj.repay_ex }}{% else %}/{% endif %}</strong></u>。</p>
 <p>（3）按月付息、分期还本法：<u><strong>{% if agree_obj.repay_method == 31 %}{{ agree_obj.repay_ex }}{% else %}/{% endif %}</strong></u>。</p>
+<p>（4）按月付息、分期还本法：到期一次性还本付息法：借款人在贷款到期日一次性偿还贷款本金及利息。贷款利息=贷款本金×日利率×贷款期限天数。贷款期限天数指本合同1.2条约定的贷款期限对应的天数，贷款期限届满前，借款人提前还款的，仍应按本合同约定的贷款期限天数计算应支付的贷款利息。</p>
 <p>选择按月付息、到期一次还本法和按月付息、分期还本法的，本合同项下的贷款按每月的二十日为结息日，结息日为付息日，如遇法定节假日，则顺延至下一工作日。</p>
 <p>选择等额本息法的，则按月归还贷款本息，当期利息当期清偿，贷款最后到期时利随本清，以贷款人放出贷款日的下一个月度同一日为首期还款日，之后于每月度同日还款。</p>
 <p>如还款日不是贷款人营业日，则借款人应于该还款日后第一个贷款人营业日还款。</p>
