--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
@@ -1,10 +1,264 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="contain">
+    <!--封面-->
+    <div class="split">
+        <div>{% include 'dbms/agree/agree_board/loan_co/cover.html' %}</div>
+    </div>
+    <!--正文-->
+    <div class="split">
+        <!--合同当事人-->
+        <div>
+            <div class="agree-tit"><strong>{{ counter_obj.get_counter_name_display }}</strong></div>
+            <div>{% include 'dbms/agree/agree_board/loan_co/hp-d.html' %}</div>
+            <div style="padding-bottom: 15pt">
+                <p>质权人：<u>成都武侯武兴小额贷款有限责任公司</u></p>
+                <p>法定代表人（负责人）：<u>黄一平</u></p>
+                <p>住所：<u>成都市武侯区武科西五路360号西部智谷B区2栋3单元10楼</u></p>
+            </div>
+        </div>
+        <!--合同主体-->
+        <div>
+            <p>
+                为保障抵押权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障抵押权人权利的实现，抵押人愿意以其合法所有的财产为抵押权人设定抵押权，抵押人、抵押权人依照我国有关法律、法规，经协商一致，订立本合同。
+            </p>
+            <p><strong>第一条 出质标的</strong></p>
+            <p>1.1出质人提供的质押财产是：<strong><u>{{ counter_property_type }}</u></strong>（以下称“质物”）。</p>
+            <p>1.2质押财产的详细情况以本合同所附“质物清单”为准。</p>
+            <p>1.3质押权的效力及于质物及其从物、从权利、附着物、附合物、加工物、孳息及代位物，股权质押的包括但不限于申请质押登记数量的股权及该股权在质押登记有效期内的送股（含公积金转增股）、派息、现金红利等。</p>
+            <p>1.4出质人保证对质物依法享有所有权或处分权，并保证质物不存在任何权属争议、被查封、被扣押、已出租等情况。</p>
+            <p>1.5（如有共有人）共有人均同意以质物为主合同项下债权提供质押担保，并接受本合同约束。</p>
+            <p>共有人：<strong><u>
+{#                {% if co_owner_list %}#}
+{#                    {% for co_owner in co_owner_list %}#}
+{#                        {% if forloop.first %}#}
+{#                            {{ co_owner.name }}#}
+{#                        {% else %}#}
+{#                           、{{ co_owner.name }}#}
+{#                        {% endif %}#}
+{#                    {% endfor %}#}
+{#                {% else %}#}
+{#                    /#}
+{#                {% endif %}#}
+            /
+            </u></strong>
+                （签字）</p>
+            <p><strong>第二条 担保的主债权及担保范围</strong></p>
+            <p>2.1质押担保的主债权为主合同项下贷款本金(大写)人民币<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}元</u>）；<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰（千分之<u>{{ agree_rate_cn_q }}</u>）</strong>；贷款期限为<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止（若主合同约定的《借款凭证》记载的贷款起始日期、到期日期与本起始日期、到期日期不一致的，以《借款凭证》的记载为准），共<u><strong>{{ agree_term_str }}</strong></u>个月零<u><strong>/</strong></u>天。</p>
+            <p>2.2出质人担保的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和实现债权的费用（包括但不限于诉讼费、财产保全费、执行费、仲裁费、律师费、差旅费、保险费、评估费、拍卖费、公告费、质押登记费、质物处置费、过户费、其他费用）以及其他所有主合同债务人的应付费用。</p>
+            <p>2.3<strong>当主合同债务人未按主合同约定按时清偿本合同担保范围内债务时，无论质权人对主合同项下的债权是否拥有其它担保或放弃、变更其他担保权或担保权顺位，且无论其他担保是否有主合同债务人自己所提供，质权人均有权直接要求出质人以质物在其担保范围内承担担保责任。</strong></p>
+            <p>2.4根据《中华人民共和国担保法》第五条的规定，本合同双方特别约定如下：</p>
+            <p><strong>本合同效力独立于主合同，主合同或其有关条款无效不影响本合同的效力。对主合同债务人在主合同无效后应承担的返还责任或赔偿责任，出质人应承担连带责任。</strong></p>
+            <p><strong>质权人与主合同债务人解除借贷关系的，出质人对主合同债务人应当承担的民事责任仍应承担担保责任。</strong></p>
+            <p><strong>第三条 质物的移交和保管</strong></p>
+            <p>3.1出质人应按规定向有关部门或单位办理质押登记和其他法定出质手续，并及时将相关登记证明材料正本移交质权人保管。</p>
+            <p>出质人应在本合同签订之日起3日内将质物移交质权人占有。质物有权利凭证的，出质人应将权利凭证一并交与质权人保管。</p>
+            <p>3.2质权人应妥善保管质物和/或其权利凭证,质权人认为必要时,可委托第三人保管。质权人对质物和/或其权利凭证的遗失、毁损有过错且给出质人造成损失的，应承担相应的责任。</p>
+            <p>3.3以汇票、本票、支票以及其他需背书出质的权利凭证设定质押时，应当背书记载“质押”字样。</p>
+            <p>汇票、本票、支票以及其他需背书出质的权利凭证在质押期间遗失、毁损的，出质人应积极协助质权人采取申请挂失、申请公示催告等救济措施。</p>
+            <p><strong>第四条 保险</strong></p>
+            <p>签订本合同之时，出质人则按下述第<u><strong>（1）</strong></u>项对质物进行财产保险：</p>
+            <p>（1）无须对质物购买财产保险；</p>
+            <p>若质物原已办有财产损失险，则出现质物赔付事故后保险人对出质人的赔付金优先抵偿给质权人；若质物的价值减损或者有减损可能，应质权人要求须购买保险。</p>
+            <p>（2）对质物向质权人认可的保险公司投保各种合适的保险，并达到如下要求：</p>
+            <p>①保出质人应按质权人的要求为质物投保，保险金额不低于主合同项下债权本息，保险期限不短于主合同项下债务履行期限，并应指定质权人为保险权益的第一受益人；</p>
+            <p>②保险手续办妥后，出质人应将保单正本交质权人保管；</p>
+            <p>③在本合同有效期内，出质人应按时支付所有保费，并履行维持保险的有效存续所必需的其他义务；</p>
+            <p>④出质人未能投保或续保的，质权人有权自行投保、续保，代为缴付保费或采取其他保险维持措施。出质人应提供必要协助，并承担质权人因此支出的保险费用和相关费用；</p>
+            <p>⑤出质人在收到质权人已代为缴纳保险费的账单后的七日内，必须把该费用支付质权人；</p>
+            <p>⑥除非经质权人事先书面同意，出质人不得擅自或允许做出对《保险合同》及其它相关法律文件的任何修正、修改或变更，不得解除保险公司所承担的义务，不得终止上述法律文件中的权利或权限，不得放弃对上述法律文件的违约行为的权利主张；</p>
+            <p>⑦出质人同意将保险公司的理赔款项（若有）划入质权人所指定的账户内，以作贷款之清偿或清偿准备；</p>
+            <p>⑧出质人在此不可撤销地委派和指定质权人为其真实合法的代理人，享有完全的代理权，并得全权代表出质人（费用由出质人负责），以质权人认为合适的方法代理履行或实施《保险合同》及其它法律文件中规定的应付款项义务，执行任何有关规定；</p>
+            <p>⑨如果保险公司支付的赔偿费不足以重建、修复受损的资产或者清偿贷款，出质人有义务重建或修复质物使其恢复受损前价值；质权人对不足清偿部分，有权向出质人追偿；</p>
+            <p><strong>第五条 出质人的陈述与保证</strong></p>
+            <p>5.1 出质人具有完全的权利和能力签订本合同。</p>
+            <p>企业或者其他组织出质人依法注册成立，所有必要的政府机构的批准都已获得且是充分的、有效的，将质物向质权人作质押之事宜已经出质人董事会或股东会（股东大会）等权力机构的有效决议确认并同意。</p>
+            <p>5.2本合同条款是出质人真实意思的表示，对出质人具有法律约束力。</p>
+            <p>5.3出质人同意质押额度的有效期届满日不超过质权到期日，以多份质押权利进行质押的以到期日最近的质押权利确定质押期限。质押额度不超过出质人提供的质押权利票面价值的90%。</p>
+            <p>5.4出质人根据本合同的担保行为不会导致违反任何其作为一方与他人签署的合同、协议或其单方面做出的承诺书、保证书等。本合同的执行将不会与出质人必须遵守的法律相抵触。</p>
+            <p>5.5出质人在谈判、签署和履行本合同过程中向质权人提供的情况和资料在所有方面是真实的、准确的、全面的，没有遗漏任何可能导致误解的实质性事实或内容。</p>
+            <p>5.6除了在本合同经各方签署以前书面通知质权人的以外，出质人在任何法院、仲裁机构或政府行政机关不存在任何悬而未决的或出质人知道可能发生的针对或牵连其自身并影响其履行本合同能力的诉讼、仲裁、执行、申诉、复议等程序及其他事件或情况。</p>
+            <p>5.7在出质人所知或可预见的范围内，不存在任何没有向质权人书面披露的可以影响其履行本合同能力的事实。</p>
+            <p>5.8除了在本合同签署以前书面通知质权人以外，出质人就其作为一方当事人与他人签署的任何合同或协议（包括本合同）或单方面做出的承诺书、保证书，未出现任何影响其在本合同项下履行能力的违约事件。</p>
+            <p>5.9出质人是质物唯一的绝对法定和实际所有权（处分权）人。质押前如果依法律规定或出质人与第三人约定共有质物，出质人必须如实告知质权人并按第一条或质权人要求的其他方式与共有人出具同意质押书面证明。出质人保证质物不附带任何担保权益(本合同下设定的担保权益除外)，及任何影响或可能影响质权人对质物之质权的事件或情形。</p>
+            <p>出质人以汇票、本票、支票以及其他需背书出质的权利凭证设定质押的，权利凭证项下的交易是真实合法的，权利凭证未被挂失止付、申请公示催告、查封、冻结，不存在争议、诉讼（仲裁）或任何未告知质权人的第三人的权益等情况。</p>
+            <p>5.10上述声明在本合同项下的义务履行完毕之前应当持续有效，在本合同每次修改、补充、变更之日均视为由出质人重复做出。</p>
+            <p><strong>第六条 出质人的义务</strong></p>
+            <p>6.1出质人应当办妥本合同项下质物质押的全部手续，以保证该项质押担保的合法效力。</p>
+            <p>出质人以股权出质的，出质人敦促并保证出质股权所在公司记载有出质人姓名（名称）及其出资额的有限责任公司股东名册上记载已出质的情况。</p>
+            <p>出质人以汇票、本票、支票以及其他需背书出质的权利凭证设定质押的，出质人在质权人的要求下应向质权人提交各权利凭证项下证明其与权利凭证签发人（如汇票的出票人等）或其直接前手之间具有真实交易关系的商品交易合同复印件、增值税专用发票复印件、货运单据等。</p>
+            <p>6.2质押期间，未经质权人事先书面同意，出质人保证不申请质物的挂失止付、公示催告或提起诉讼。</p>
+            <p>出质人以股权出质的，质押期间非经质权人事先书面同意出质人不得转让已出质股权并不得办理出质变更、注销、撤销。</p>
+            <p>6.3出质人保证不采取或促使采取或允许采取任何行动，而该等行动经质权人判断可能在任何方面会损害、危及或以其他形式对本合同项下的质物产生实质不利影响。</p>
+            <p>6.4除非得到质权人事先书面同意，出质人在主合同项下欠款全部偿清以前不得在质物上设定或允许存在任何担保权益(但在本合同项下所设定的担保权益除外)。</p>
+            <p>6.5出质人为使质权人可以充分行使本合同和主合同所规定的权益，将按质权人的指示，及时采取质权人认为必要的行动和措施，签署并向质权人提交质权人认为必要的文件。</p>
+            <p>6.6在事先通知出质人，或出质人发生或依质权人判断可能发生违反本合同约定的情形下，出质人同意并接受质权人或其授权代表视察出质人（股权出质的还包括出质股权所在公司）的经营场所、经营情况，及接受质权人或其指定代表随时审查出质人（及出质股权所在公司）的财务账册、借款使用项目的档案、账簿等。</p>
+            <p>6.7质物有损坏或者价值明显减少的可能，出质人应按质权人的要求提供新的担保。</p>
+            <p>出质人不得将其在本合同项下的全部或部分权益转让给其他第三人。</p>
+            <p>6.8质押期间，未经质权人事先书面同意，出质人保证不使用、处分、兑现质物。</p>
+            <p>6.9经质权人书面同意处分的，出质人应向处分行为相对人告知质物已设定质押权的情况，且质物处分所得价款或补偿金等处分对价，质权人有权选择下列方式进行处理：</p>
+            <p>（1）清偿或提前清偿主合同项下贷款本息及相关费用；</p>
+            <p>（2）转为定期存款，存单用于质押；</p>
+            <p>（3）存入质权人指定账户，用于清偿或质押；</p>
+            <p>（4）其他合法有效的处理方式。</p>
+            <p>6.10质物权属发生争议,或者质权受到或可能受到来自任何第三方的不利影响时,出质人应立即书面通知质权人,并配合质权人采取有关措施。</p>
+            <p>6.11<strong>出质人承诺在欠款结清前，债权人和主合同债务人变更主合同（包括但不限于变更偿还币种、还款方式、贷款期限<含展期>、利率、贷款账号、还款账号、贷款用途、还款计划、起息日、结息日等内容）的，无论是否通知出质人，出质人仍应承担担保责任。但是，未征得出质人书面同意增加合同金额、非因中国人民银行贷款基准利率调整或其他法定原因提高利率的，出质人仅按本合同约定的金额、利率承担担保责任。</strong></p>
+            <p>6.12在主合同债务人向质权人清偿主合同项下全部债务之前，出质人不向主合同债务人或其他担保人行使因履行本合同所享有的追偿权。</p>
+            <p>6.13出质人应协助质权人实现质权并不会设置任何障碍。</p>
+            <p>6.14出质人同意，质权人也有权为本合同订立和履行之目的，通过中国人民银行信用信息基础数据库和其他依法设立的信用数据库查询出质人的相关信息，以决定是否接受出质人提供的担保。质权人亦可依据有关法律、法规、规范性文件的规定或金融监管机构的要求，将有关本合同的信息和其他相关信息提供给中国人民银行信用信息基础数据库或其他依法设立的信用数据库。</p>
+            <p>6.14抵押人应承担本合同项下有关抵押物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
+            <p>6.15出质人应承担本合同项下有关质物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
+            <p>6.16在出质人得知发生或很可能发生本合同和主合同规定的违约或抗辩事由以后立即通知质权人，并不时地向质权人提供质权人合理要求的情况、资料。</p>
+            <p>6.17 主合同债务人出现任何违约行为，包括但不限于擅自改变贷款用途等，不对出质人构成任何影响，出质人仍应按照本合同承担担保责任。</p>
+            <p><strong>第七条 质权的实现</strong></p>
+            <p>7.1下列情形出现，质权人有权立即行使质权，且要求其对损害予以赔偿，处分质物所需一切合理费用由出质人承担：</p>
+            <p>（1）主合同债务人违约或出现主合同项下任何不安抗辩事件或权利的产生，包括但不限于主合同债务履行期限届满之日质权人未受清偿或法律、法规规定或主合同的约定或者主合同双方协议任一主合同债务提前到期而质权人未受清偿的；</p>
+            <p>（2）出质人违反第五条之陈述和保证或第六条规定的出质人义务；</p>
+            <p>（3）企业或者其他组织出质人发生停业、歇业、申请破产、被宣告破产、解散、清算、停业整顿、被吊销营业执照、被撤销等情况或自然人出质人发生患疾病或者遭遇事故而昏迷不醒、身体残疾或严重影响生活，丧失或部分丧失民事行为能力，下落不明、失踪或被宣告失踪以及死亡、被宣告死亡等情况的；</p>
+            <p>（4）非因质权人的过错而出现出质财产的价值减少可能危及质权人权益而出质人未能提供符合质权人要求的相应担保的。</p>
+            <p>（5）出质人发生危及、损害或可能危及、损害质权人权益的其他事件。</p>
+            <p>质权人有权与出质人协议以质物折价或以拍卖、变卖质物所得的价款优先受偿或请求人民法院依法拍卖、变卖质物实现质权。质权人对质物享有的质权得对抗所有第三人对出质人的债权，无论出质人的其他债权人以任何方式（包括但不限于向司法机关申请对质物实施查封、执行等强制措施）向出质人进行追索，均不影响质权人在分配质物变现所得时的优先受偿权。</p>
+            <p>7.2<strong>质押的汇票、支票、本票、债券、存款单、仓单、提单的一张、数张或所有兑现日期或者提货日期先于主合同贷款期限届满的，出质人授权质权人可以将其中的一张、数张或所有汇票、支票、本票、债券、存款单、仓单、提单兑现或者提货，兑现价款用于提前清偿主合同项下的债务，或转让权利，或质权人有权决定是否根据出质人的要求将存单的兑现或转让价款在自己认可的银行处为出质人设定新的存单，继续作为本合同下质押担保的质物。</strong></p>
+            <p><strong>质押的汇票、支票、本票、债券、存款单、仓单、提单的一张、数张或所有兑现日期或者提货日期后于主合同贷款期限届满的，质权人可以将其中的一张、数张或所有汇票、支票、本票、债券、存款单、仓单、提单兑现、提货或转让权利，所得款项用于清偿债务人在主合同项下的债务。</strong></p>
+            <p>7.3 出质人未按第6.7款约定另行提供担保时，质权人有权与出质人协议以质物折价或以拍卖、变卖质物所得的价款用于提前清偿被担保债权及有关费用或请求人民法院依法拍卖、变卖质物用于提前清偿被担保债权及有关费用；出质人不同意提前清偿的，应将所得价款存入质权人指定的保证金账户，未经质权人书面同意不得支取。主债权到期未受清偿时，质权人可以该账户中的款项直接受偿。</p>
+            <p>7.4质押权人处分质押物所得款项和其他收益，按下列顺序进行抵偿：</p>
+            <p>（1）质押物处置费用包括但不限于接管人的保管费、诉讼费、执行费、律师费、评估费、拍卖费、过户费；</p>
+            <p>（2）支付质押物处分后应缴纳的税费；</p>
+            <p>（3）偿还主合同项下尚未支付的违约金、利息；</p>
+            <p>（4）偿还主合同债务人到期应付但其实际未付的其他款项；</p>
+            <p>（5）偿还本合同项下质押人应支付但实际尚未支付的款项；</p>
+            <p>（6）偿还最高额专用借款合同项下尚欠的贷款本金；</p>
+            <p>质押权人处分质押物所得款项和其他收益若不足清偿质押权人主合同及本合同项下债权，质押权人有权向主合同债务人追索不足部分；若清偿质押权人主合同及本合同项下债权有剩余，则剩余部分由质押权人归还给质押人。</p>
+            <p><strong>第八条 保证责任条款</strong></p>
+            <p>8.1 因下列原因致使质权不成立、未生效或无法实现的，出质人应对主合同债务人在主合同项下的债务承担连带保证责任：</p>
+            <p>（1）出质人未按第3.1款约定将质物移交质权人占有（或者登记）；</p>
+            <p>（2）出质人在第五条项下所作陈述与保证不真实；</p>
+            <p>（3）质物无法处置变现；</p>
+            <p>（4）因出质人方面的其他原因。</p>
+            <p>8.2保证期间为主合同生效之日起至主合同债务人的债务履行期限届满之日后三年止。</p>
+            <p>质权人（债权人）宣布主合同项下债务全部提前到期的，以其宣布的提前到期日为债务履行期限届满日。</p>
+            <p>8.3本保证条款的效力独立于本合同其余条款，本保证条款的生效条件为本合同项下质权因第8.1款所列原因不成立、未生效或无法实现。</p>
+            <p><strong>第九条 公证、担保权实现及争议解决</strong></p>
+            <p>9.1<strong>出质人若不履行或不完全履行合同约定的义务，出质人愿意接受依法强制执行。</strong></p>
+            <p>出质人、质权人双方均同意自本合同签署后3个工作日内到质权人所在地公证机构申请对本合同办理具有强制执行效力的公证。</p>
+            <p>9.2<strong>如果出质人未按本合同约定及时承担担保责任清偿主合同债务人对质权人的债务，质权人有权向公证本合同的公证机构申请执行证书并凭本合同的公证书、执行证书、主合同、本合同向有管辖权的人民法院申请强制执行“质物清单”中所列的质物，出质人自愿接受该有管辖权的人民法院强制执行。</strong></p>
+            <p>9.3<strong>如果出质人未按本合同约定及时承担担保责任清偿主合同债务人对质权人的债务，质权人也有权不选择9.2款规定的方式而径行依据现行法律规定向有管辖权的人民法院申请实现担保物权。</strong></p>
+            <p>9.4若因任何原因，本合同不能/未以强制执行公证书直接由人民法院强制执行或不能/未以直接向人民法院申请实现担保物权的，关于本合同的所有争议、纠纷，选择下列第<u>（2）</u>种方式解决：</p>
+            <p>（1）提交<u>/</u>仲裁委员会仲裁；</p>
+            <p>（2）向质权人所在地有管辖权的法院提起诉讼。</p>
+            <p><strong>第十条 通讯及送达</strong></p>
+            <p>质权人与出质人双方就本合同中涉及各类通知、协议等文件及就合同发生纠纷时相关文件和法律文书送达时的送达地址及法律后果作下列条款约定：</p>
+            <p>10.1质权人与出质人双方确认的有效送达地址如下：</p>
+            <div>{% include 'dbms/agree/agree_board/loan_co/notify-s.html' %}</div>
+            <p>如至质权人：成都武侯武兴小额贷款有限责任公司</p>
+            <p>地址：成都市武侯区武科西五路360号西部智谷B区2栋4单元4楼附楼</p>
+            <p>电话：028-85014022</p>
+            <p>收件人：成都武侯武兴小额贷款有限责任公司</p>
+            <p>10.2质权人与出质人双方确认上述送达地址适用范围包括非诉时各类通知、协议等文件以及就合同发生纠纷时相关文件和法律文书的送达，同时包括在争议进入仲裁、民事诉讼程序后的一审、二审、再审和执行程序。</p>
+            <p>10.3双方的送达地址需要变更时应向对方履行书面的通知义务；仲裁及民事诉讼阶段当事人地址变更时应当向仲裁机构、人民法院履行送达地址变更通知义务。未履行以上通知义务的，双方确认的送达地址仍视为有效送达地址。</p>
+            <p>任何一方未按前述方式履行通知义务，双方所确认的送达地址仍视为有效送达地址。</p>
+            <p>10.4双方将按如下规定确定通知送达被视为正式送达的日期；</p>
+            <p>1、直接送达：以专人直接递送的，接收人(包括本合同指定收件人、法定代表人及其指定的接收人）签收之日视为送达。</p>
+            <p>2、邮寄送达：</p>
+            <p>（1）以特快专递形式发出的，发往本市市内的，发出后第二日视为送达；发往内地其他地区的，发出后第三日视为送达；发往港、澳、台地区的，发出后第四日视为送达；发往境外其他国家或地区的，发出后第六日视为送达。</p>
+            <p>（2）以挂号方式发出的，发往本市的，邮寄后第三日视为送达；发往内地其他地区的，发出后第四日视为送达；发往港、澳、台地区的，发出后第五日视为送达；发往境外其他国家或地区的，发出后第七日视为送达。</p>
+            <p>10.5因以下情形导致法律文书未能被当事人接受的，依然产生送达的法律后果：</p>
+            <p>1、因当事人提供或者确认的送达地址不准确的；</p>
+            <p>2、送达地址变更后未及时书面告知对方和仲裁机构、人民法院的；</p>
+            <p>3、当事人或有权签收人拒绝签收的。</p>
+            <p>发生上述情形时，适用本条第10.4款。</p>
+            <p>10.6履行送达地址变更通知义务的，以变更后的送达地址为有效送达地址。对于上述当事人在合同中明确约定的送达地址，法院进行送达时可直接邮寄送达，即使当事人未能收到法院邮寄送达的文书，由于其在合同中的约定，也应当视为送达。</p>
+            <p>10.7纠纷进入仲裁、民事诉讼程序后，如当事人应诉并直接向仲裁机构、法院提交送达地址确认书，该确认地址与本合同的送达地址不一致的，以向仲裁机构、法院提交确认的送达地址为准。送达地址确认书中载明的送达地址为律师或委托代理人地址的，本合同的确认的送达地址同时有效。</p>
+            <p>10.8本约定作为合同中独立存在的条款，不受合同其他条款效力的影响。</p>
+            <p><strong>第十一条 其他条款</strong></p>
+            <p>11.1本合同所约定的出质人应承担的主合同债权人/质权人所花费律师费（律师代理费）是指依据当时的法律规定支付的律师费，出质人应据实承担。</p>
+            <p>11.2在本合同有效期内，当出质人的合法承继人依法承继质物时，本合同项下的各项责任和义务由该承继人承担。质权人根据本合同对质物拥有的质权不受上述承继情形的任何影响。承继人有责任于承继质物之日起十五日内向有主管权限的登记机关（构）办理出质登记的变更手续，有关费用由承继人自行承担。</p>
+            <p>11.3由于现行法律、法规的颁布、变更、解释、实施或因与此有关的登记程序的变更而使本合同效力受到影响或按本合同规定的条款处分质物与现行法律、法规相违背时，出质人应根据质权人的书面要求直接或间接地签订补充合同和出质文件，或履行质权人所合理要求的其他一切行为。</p>
+            <p>11.4出质人有拖欠出质担保债务、恶意逃废债等行为时，质权人有权将该种行为向有关单位通报，并在新闻媒体上公告。</p>
+            <p>11.5本合同正本一式<strong><u>{{ counter_copy_cn }}</u></strong>份，具有同等效力。</p>
+            <p>11.6<strong>本合同经企业或者其他组织出质人法定代表人或负责人或授权代表签字（或盖章）并加盖公章（自然人出质人本人或授权代表签字）、质权人法定代表人或负责人或授权代表签字（或盖章）并加盖公章后生效。</strong></p>
+            <p><strong>第十二条 其他约定事项</strong></p>
+            <div>{% include 'dbms/agree/agree_board/counter-other-space.html' %}</div>
+            <p><strong>出质人声明：出质人已对本合同各条款作全面、准确的理解，质权人应出质人的要求作了相应的条款说明，签约各方对本合同含义理解认识一致，不存在任何歧义。出质人对本合同的签署意味着对本合同内容的全面理解、接受和对声明内容的确认，否则应不予签署。</strong>
+            </p>
+        </div>
+    </div>
+    <!--签字页-->
+    <div class="split">
+        <p>(此页无正文)</p>
+        <div class="sign-page">
+            <div class="sign-page-y">
+                <!--WARRANT_TYP_LIST = [
+                               (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),
+                               (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]-->
+                {% for warrant in counter_obj.warrant_counter.warrant.all %}
+                    {% if forloop.first %}
+                        {#(1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程')#}
+                        {% if warrant.ownership_warrant.all %}
+                            {% for ownership in warrant.ownership_warrant.all %}
+                                {% if ownership.owner.genre == 1 %}
+                                    <p>抵押人（公章）：<strong><u>{{ ownership.owner.name }}</u></strong></p>
+                                    <p>法定代表人（或负责人或授权代理人）：<strong><u>{{ ownership.owner.company_custome.representative }}</u></strong></p>
+                                    <p>（签字或盖章）</p>
+                                    {% include 'dbms/agree/agree_board/sign-date.html' %}
+                                {% elif ownership.owner.genre == 2 %}
+                                    <p>抵押人：<strong><u>{{ ownership.owner.name }}</u></strong></p>
+                                    <p>（本人或授权代理人签字）</p>
+                                    {% include 'dbms/agree/agree_board/sign-date.html' %}
+                                {% endif %}
+                            {% endfor %}
+                            {#(11, '应收账款')#}
+                        {% elif warrant.warrant_typ == 11 %}
+                            <p>出质人：<strong><u>{{ warrant.receive_warrant.receive_owner.name }}</u></strong></p>
+                            <p>法定代表人（或负责人或授权代理人）：<strong><u>{{ warrant.receive_warrant.receive_owner.company_custome.representative }}</u></strong></p>
+                            <p>（签字或盖章）</p>
+                            {% include 'dbms/agree/agree_board/sign-date.html' %}
+                            {#(21, '股权')#}
+                        {% elif warrant.warrant_typ == 21 %}
+                            <p>出质人：<strong><u>{{ warrant.stock_warrant.stock_owner.name }}</u></strong></p>
+                            <p>法定代表人（或负责人或授权代理人）：<strong><u>{{ warrant.stock_warrant.stock_owner.company_custome.representative }}</u></strong></p>
+                            <p>（签字或盖章）</p>
+                            {% include 'dbms/agree/agree_board/sign-date.html' %}
+                            {#(31, '票据')#}
+                        {% elif warrant.warrant_typ == 31 %}
+                            <p>出质人：<strong><u>{{ warrant.draft_warrant.draft_owner.name }}</u></strong></p>
+                            <p>法定代表人（或负责人或授权代理人）：<strong><u>{{ warrant.draft_warrant.draft_owner.company_custome.representative }}</u></strong></p>
+                            <p>（签字或盖章）</p>
+                            {% include 'dbms/agree/agree_board/sign-date.html' %}
+                            {#(41, '车辆')#}
+                        {% elif warrant.warrant_typ == 41 %}
+                            <p>抵押人：<strong><u>{{ warrant.vehicle_warrant.vehicle_owner.name }}</u></strong></p>
+                            <p>法定代表人（或负责人或授权代理人）：<strong><u>{{ warrant.vehicle_warrant.vehicle_owner.company_custome.representative }}</u></strong></p>
+                            <p>（签字或盖章）</p>
+                            {% include 'dbms/agree/agree_board/sign-date.html' %}
+                            {#(51, '动产')#}
+                        {% elif warrant.warrant_typ == 51 %}
+                            <p>抵押人：<strong><u>{{ warrant.chattel_warrant.chattel_owner.name }}</u></strong></p>
+                            <p>法定代表人（或负责人或授权代理人）：<strong><u>{{ warrant.chattel_warrant.chattel_owner.company_custome.representative }}</u></strong></p>
+                            <p>（签字或盖章）</p>
+                            {#(55, '其他')#}
+                        {% elif warrant.warrant_typ == 55 %}
+                            <p>出质人：<strong><u>{{ warrant.other_warrant.other_owner.name }}</u></strong></p>
+                            <p>法定代表人（或负责人或授权代理人）：<strong><u>{{ warrant.other_warrant.other_owner.company_custome.representative }}</u></strong></p>
+                            <p>（签字或盖章）</p>
+                            {% include 'dbms/agree/agree_board/sign-date.html' %}
+                        {% else %}
+                            <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+                            <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+                            <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+                        {% endif %}
+                    {% endif %}
+                {% endfor %}
 
-</body>
-</html>
+            </div>
+            <div class="sign-page-j">
+                <p>质权人（公章）：{{ UN }}</p>
+                <p>法定代表人（或负责人或授权代理人）：黄一平</p>
+                <p>（签字或盖章）</p>
+                {% include 'dbms/agree/agree_board/sign-date.html' %}
+            </div>
+        </div>
+    </div>
+    <!--附件页-->
+    <div class="split">
+        <div>{% include 'dbms/agree/agree_board/loan_co/mortgage-list.html' %}</div>
+    </div>
+</div>
