--- a/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
@@ -35,7 +35,7 @@
 <p><img src="{% static "/dbms/images/debx.png" %}"></p>
 <p>每期还款额为人民币（大写金额）：<u><strong>{% if agree_obj.repay_method == 21 %}{{ agree_obj.repay_ex }}{% else %}/{% endif %}</strong></u>。</p>
 <p>（3）按月付息、分期还本法：<u><strong>{% if agree_obj.repay_method == 31 %}{{ agree_obj.repay_ex }}{% else %}/{% endif %}</strong></u>。</p>
-<p>（4）按月付息、分期还本法：到期一次性还本付息法：借款人在贷款到期日一次性偿还贷款本金及利息。贷款利息=贷款本金×日利率×贷款期限天数。贷款期限天数指本合同1.2条约定的贷款期限对应的天数，贷款期限届满前，借款人提前还款的，仍应按本合同约定的贷款期限天数计算应支付的贷款利息。</p>
+<p>（4）到期一次性还本付息法：借款人在贷款到期日一次性偿还贷款本金及利息。贷款利息=贷款本金×日利率×贷款期限天数。贷款期限天数指本合同1.2条约定的贷款期限对应的天数，贷款期限届满前，借款人提前还款的，仍应按本合同约定的贷款期限天数计算应支付的贷款利息。</p>
 <p>选择按月付息、到期一次还本法和按月付息、分期还本法的，本合同项下的贷款按每月的二十日为结息日，结息日为付息日，如遇法定节假日，则顺延至下一工作日。</p>
 <p>选择等额本息法的，则按月归还贷款本息，当期利息当期清偿，贷款最后到期时利随本清，以贷款人放出贷款日的下一个月度同一日为首期还款日，之后于每月度同日还款。</p>
 <p>如还款日不是贷款人营业日，则借款人应于该还款日后第一个贷款人营业日还款。</p>
