--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-31.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-31.html
@@ -8,27 +8,21 @@
         </td>
     </tr>
     <tr>
-        <td align="center">质押权利名称</td>
-        <td align="center">质押权利凭证编号</td>
-        <td align="center">面积(平方米)</td>
-        <td align="center">处所</td>
-        <td align="center">权利证书编号</td>
-        <td align="center">评估价值（元）</td>
-        <td align="center">备注</td>
+        <td colspan="2" align="center">质押权利名称</td>
+        <td colspan="3" align="center">质押权利凭证编号</td>
+        <td align="center">质押权利数量</td>
+        <td align="center">面值/评估价值（元）</td>
     </tr>
-    <tr>
-        <td rowspan="{{ counter_warrant_list_count }}">{{ counter_property_type }}</td>
-        <td>{{ warrant.ground_warrant.get_ground_app_display }}</td>
-        <td align="right">{{ warrant.ground_warrant.ground_area }}</td>
-        <td>{{ warrant.ground_warrant.ground_locate }}</td>
-        <td>
-            {% for ownership in warrant.ownership_warrant.all %}
-                {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
-            {% endfor %}
-        </td>
-        <td align="right">{{ warrant.evaluate_value|default_if_none:'' }}</td>
-        <td></td>
-    </tr>
+    {% for draft in counter_draft_obj.extend_draft.all%}
+        <tr>
+            {% if forloop.first%}
+                <td rowspan="{{ counter_draft_list_count }}" colspan="2" >{{ counter_draft_obj.get_typ_display }}</td>
+            {% endif%}
+            <td  colspan="3" >{{ draft.draft_num }}</td>
+            <td align="center">1</td>
+            <td align="right">{{ draft.draft_amount }}</td>
+        </tr>
+    {% endfor %}
 {% else %}
     <tr>
         <td>{{ warrant.ground_warrant.get_ground_app_display }}</td>
